cmake_minimum_required(VERSION 3.13)
project(data_structure_using_c_plus_plus)

set(CMAKE_CXX_STANDARD 17)

add_executable(data_structure_using_c_plus_plus main.cpp 001_principles/clockType.cpp 001_principles/clockType.h 001_principles/test/clockType_Tests.cpp 002_object_oriented/inheritance/rectangleType.cpp 002_object_oriented/inheritance/rectangleType.h 002_object_oriented/inheritance/boxType.cpp 002_object_oriented/inheritance/boxType.h 002_object_oriented/composition/dateType.cpp 002_object_oriented/composition/dateType.h 002_object_oriented/composition/personalInfoType.cpp 002_object_oriented/composition/personalInfoType.h 002_object_oriented/composition/personType.cpp 002_object_oriented/composition/personType.h 002_object_oriented/classTemplate/listType.cpp 002_object_oriented/classTemplate/listType.h 002_object_oriented/classTemplate/test/listType_tests.cpp)